Fixed header menu item hover effect and scrollbar

--- a/wp-content/themes/wp-rock/src/scss/parts/_global.scss
+++ b/wp-content/themes/wp-rock/src/scss/parts/_global.scss
@@ -1,3 +1,8 @@
+html,
+body {
+    overflow-y: scroll;
+}
+
 body {
     padding: 0;
     margin: 0;
